--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-oo
+<html>
+  <head>
+    <body>
+      <h1> Lockpick.ga </h1>
+      <a href="">Forum</a>
+      <a href=""> Discord>
+        
+        
