--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
     <body>
+      <title> lockpick.ga </title>
       <h1> Lockpick.ga </h1>
       <a href="">Forum</a>
       <a href=""> Discord>
-        
+        <style>
+          * {cursor: url(contents/assets/cur1150.ani), default 
+        </style>
         
