--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
       <title> lockpick.ga </title>
       <h1> Lockpick.ga </h1>
       <a href="">Forum</a>
+      <div>
+        <br>
       <a href=""> Discord>
         <style>
-          * {cursor: url(contents/assets/cur1150.ani), default 
+          * {cursor: url(cur1150.ani), default 
         </style>
         
