--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <a href=""> Discord>
         <style>
           * {cursor: url(cur1150.ani), default 
+            h1 {color: #add8e6}
         </style>
         
