--- a/index.html
+++ b/index.html
@@ -11,4 +11,7 @@
           * {cursor: url(cur1150.ani), default 
             h1 {color: #add8e6}
         </style>
-        
+        <html>
+<body background="oof.jpg">
+</body>
+</html> 
