--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             h1 {color: #add8e6}
         </style>
         <html>
-<body background="oof.jpg">
+<body background="oof.gif">
 </body>
 </html> 
