--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
             h1 {color: #add8e6}
         </style>
         <html>
-<body background="oof.gif">
+div > div {
+  background-image: url(oof.gif);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #ccc;
+  border: 1px solid;
+  width: 20em;
+  height: 10em;
+}
+div.contain {
+  background-size: contain;
+}
+div.cover {
+  background-size: cover;
+}
+
+
+div > div {
+  margin: 0 1ex 1ex 0;
+  float: left;
+}
+div + div {
+  clear: both;
+  border-top: 1px dashed silver;
+  padding-top:1ex;
+}
+div > div::after {
+  background-color: #000;
+  color: #fefefe;
+  margin: 1ex;
+  padding: 1ex;
+  opacity: 0.8;
+  display: block;
+  width: 10ex;
+
 </body>
 </html> 
