--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             h1 {color: #add8e6}
         </style>
         <html>
+          <style>
 div > div {
   background-image: url(oof.gif);
   background-repeat: no-repeat;
@@ -46,6 +47,7 @@ div > div::after {
   opacity: 0.8;
   display: block;
   width: 10ex;
+          </style>
 
 </body>
 </html> 
