--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             h1 {color: #add8e6}
         </style>
         <html>
-          <style>
+         <body>
+           <head>
+             <style>
 div > div {
   background-image: url(oof.gif);
   background-repeat: no-repeat;
