--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
       <div>
         <br>
       <a href=""> Discord>
-        <style>
+       <style>
           * {cursor: url(cur1150.ani), default 
             h1 {color: #add8e6}
-        <style>
+        </style>
         body {
         overflow-y: hidden ! important;
         overflow-x: hidden ! important;
         background-color: #f8f8f8;
-        background-image: url('index.png');
+        background-image: url('oof.gif');
         /*background-size: cover;*/
         background-size: contain;
         background-repeat: no-repeat;
