--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           * {cursor: url(cur1150.ani), default 
             h1 {color: #add8e6}
         </style>
+        <style>
         body {
         overflow-y: hidden ! important;
         overflow-x: hidden ! important;
