--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <body>
       <title> lockpick.ga </title>
       <h1> Lockpick.ga </h1>
-      <a href="">Forum</a>
+      <a href="http://lockpickforums.000webhostapp.com/">Forum</a>
       <div>
         <br>
-      <a href=""> Discord>
+        <a href="https://discord.gg/3nd5uzd"> Discord </a>
        <style>
           * {cursor: url(cur1150.ani), default 
-            h1 {color: #add8e6}
+            h1 {color: purple}
+            href {color:blue}
         </style>
         <style>
         body {
